syntax = "proto3";

package learn_grpc.post;

option go_package = "services/post";

service PostService {
    rpc GetPosts(EmptyRequest) returns (PostResponse);
    rpc GetPost(PostRequest) returns (Post);
    rpc UpdatePost(UpdatePostRequest) returns (Status);
    rpc DeletePost(PostRequest) returns (Status);
}

message EmptyRequest {}

message Post {
    int32 Id = 1;
    int32 UserId = 2;
    string Title = 3;
    string Body = 4;
}

message PostResponse {
    repeated Post posts = 1;
}

message PostRequest {
    int32 Id = 1;
}

message UpdatePostRequest {
    int32 Id = 1;
    optional string Title = 2;
    optional string Body = 3;
}

message Status { 
    string Info = 1;
}